<resources>
    <string name="app_name">DeliveryAddressDemo</string>

    <string name="consignee">收货人：</string>
    <string name="phone_number">手机号码：</string>
    <string name="location">所在地区：</string>
    <string name="delivery_address">收货地址：</string>
    <string name="detailed_delivery_address">详细地址：</string>
    <string name="default_delivery_address">默认地址</string>
    <string name="my_delivery_address">我的收货地址</string>
    <string name="save_delivery_address">保存收货地址</string>
    <string name="delete_delivery_address">删除收货地址</string>
    <string name="add_delivery_address">添加收货地址</string>
    <string name="revamp_delivery_address">修改收货地址</string>
    <string name="set_as_default_delivery_address">设为默认地址</string>

    <string name="confirm_order">确认订单</string>
    <string name="add_shopping_cart">加入购物车</string>
    <string name="buy">立即购买</string>
    <string name="service">客服</string>
    <string name="collect">收藏</string>
    <string name="buy_success">付款成功 ！</string>

    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="add">添加</string>

</resources>
