<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rl_adapter_address_payment"
    android:descendantFocusability="blocksDescendants"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_address_id_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />


    <TextView
        android:id="@+id/tv_adapter_consignee_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consignee"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/tv_adapter_phone_number_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/tv_adapter_consignee_payment"
        android:text="@string/phone_number"
        android:textColor="@color/light_black"
        android:layout_alignBottom="@+id/tv_adapter_consignee_payment"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_adapter_location_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_adapter_consignee_payment"
        android:layout_marginTop="5dp"
        android:text="@string/detailed_delivery_address"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_adapter_delivery_address_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_adapter_location_payment"
        android:layout_marginTop="3dp"
        android:text="@string/detailed_delivery_address"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="16sp" />

    <View
        android:layout_width="1px"
        android:layout_height="40dp"
        android:background="@color/black"
        android:layout_toStartOf="@+id/btn_edit"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"/>

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:text="@string/edit"
        android:textSize="18sp"
        android:textColor="@color/orange"
        android:background="@null"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>
