<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consignee"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_result_consignee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consignee"
            android:textSize="18sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_result_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consignee"
            android:textSize="18sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_address"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_result_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_address"
            android:textSize="18sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/buy_success"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:textColor="@android:color/holo_red_dark"/>

</LinearLayout>
