<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/title_new_delivery_address" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/consignee"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <cn.s.deliveryaddressdemo.view.ClearableEditText
            android:id="@+id/et_consignee"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp"
            android:inputType="text"
            android:textSize="18sp"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/phone_number"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <cn.s.deliveryaddressdemo.view.ClearableEditText
            android:id="@+id/et_phone_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:inputType="phone"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:id="@+id/ll_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/location"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:minLines="2"
            android:textSize="18sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/detailed_delivery_address"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <cn.s.deliveryaddressdemo.view.ClearableEditText
            android:id="@+id/et_detailed_delivery_address"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="如道路、门牌号、小区、楼栋号、单元室等"
            android:inputType="textMultiLine"
            android:selectAllOnFocus="true"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <Switch
            android:id="@+id/sw_default"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:splitTrack="false"
            android:checked="false"
            android:text="@string/set_as_default_delivery_address"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:id="@+id/ll_delete_delivery_address"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_save_delivery_address"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/save_delivery_address"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray" />


</LinearLayout>
