<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="ScrollViewCount">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/aa"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/bb"
                tools:ignore="ContentDescription" />
        </LinearLayout>


    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/textColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        tools:ignore="DisableBaselineAlignment">

        <LinearLayout
            android:id="@+id/ll_service"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:src="@drawable/ic_service"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:text="@string/service"
                android:textSize="14sp"
                android:textColor="@color/textColor"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_collect"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:src="@drawable/ic_collect"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:text="@string/collect"
                android:textSize="14sp"
                android:textColor="@color/textColor"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp">

            <Button
                android:id="@+id/btn_add_cart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_style_left"
                android:text="@string/add_shopping_cart"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/btn_buy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_style_right"
                android:text="@string/buy"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>